# sol

./: .gitignore  Makefile.am  README.md  configure.ac
src/cli/: main.c
src/lib/: eopkg-atomics.h  eopkg.c  eopkg.h  sol-atomics.h  sol.c  sol.h  util.h
src/lib/db/: install-db.c  install-db.h
src/lib/xml/: entry.c  metadata.c  metadata.h
tests/: check-metadata.c
tests/data/: files.xml  metadata.xml
